# matfree

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py
.github/: release.yml
.github/workflows/: ci.yaml  doc-publish.yml  release.yml
API_documentation/bounds/: index.html
API_documentation/decomp/: index.html
API_documentation/eig/: index.html
API_documentation/funm/: index.html
API_documentation/hutchinson/: index.html
API_documentation/lanczos/: index.html
API_documentation/low_rank/: index.html
API_documentation/lstsq/: index.html
API_documentation/pinv/: index.html
API_documentation/polynomial/: index.html
API_documentation/stochtrace/: index.html
API_documentation/test_util/: index.html
Developer_documentation/1_use_matfree's_continuous_integration/: index.html
Developer_documentation/2_contribute_to_matfree/: index.html
Developer_documentation/3_extend_matfree's_documentation/: index.html
Developer_documentation/4_understand_matfree's_api_policy/: index.html
Tutorials/1_compute_log_determinants_with_stochastic_lanczos_quadrature/: index.html
Tutorials/2_estimate_log_determinants_of_py_tree_valued_functions/: index.html
Tutorials/3_implement_uncertainty_quantification_for_trace_estimation/: index.html
Tutorials/4_combine_trace_estimation_with_control_variates/: index.html
Tutorials/5_implement_vector_calculus_in_linear_complexity/: index.html
Tutorials/6_carry_out_stochastic_trace_estimation_with_minimal_memory/: index.html
Tutorials/7_compute_matrix_functions_without_materializing_large_matrices/: index.html
Tutorials/8_differentiate_a_gaussian_log_density_for_gp_hyperparameter_learning/: index.html
api/decomp/: index.html
api/hutchinson/: index.html
api/montecarlo/: index.html
api/slq/: index.html
benchmarks/: index.html  jacobian_squared.py
control_variates/: index.html
dev/: index.html
docs/: control_variates.md  higher_moments.md  index.md  log_determinants.md  pytree_logdeterminants.md  vector_calculus.md
docs/Tutorials/: 5_use_matfree_with_control_variates.py
docs/api/: decomp.md  hutch.md  hutchinson.md  lanczos.md  montecarlo.md  pinv.md  slq.md
docs/benchmarks/: control_variates.py  index.md  jacobian_squared.py
docs/dev/: index.md
docs/javascripts/: mathjax.js
docs/tutorials/: control_variates.md  control_variates.py  higher_moments.md  higher_moments.py  log_determinants.md  pytree_logdeterminants.md  vector_calculus.md
docs/tutorials_py/: higher_moments.py  pytree_logdeterminants.py  vector_calculus.py
higher_moments/: index.html
hutch/: _version.py  hutch.py  lanczos.py  montecarlo.py  sample.py
hutch/backend/: flow.py  linalg.py  np.py  plt.py  prng.py  testing.py  transform.py
javascripts/: mathjax.js
log_determinants/: index.html
matfree/: __init__.py  _hutch_old.py  benchmark_util.py  bounds.py  chebyshev.py  decomp.py  eig.py  funm.py  funm_trace.py  hutch.py  hutchinson.py  lanczos.py  low_rank.py  lstsq.py  matfun.py  montecarlo.py  pinv.py  polynomial.py  sample.py  slq.py  stochtrace.py  stochtrace_funm.py  test_util.py
matfree/backend/: __init__.py  config.py  containers.py  control_flow.py  func.py  linalg.py  np.py  plt.py  prng.py  progressbar.py  testing.py  time.py  transform.py  tree.py  tree_util.py  typing.py
scripts/: generate_api_docs.py  readme_to_dev_docs.py  tutorials_to_py_light.py
search/: search_index.json
tests/: __init__.py  test_ad.py  test_autodiff.py  test_decomp.py  test_hutch.py  test_lanczos.py  test_lstsq.py  test_montecarlo.py  test_sample_fun.py  test_slq.py
tests/test_bounds/: test_bai_golub.py
tests/test_cheb/: test_chebyshev_approximation.py
tests/test_decomp/: test_alg_bidiagonal_full_reortho.py  test_alg_tridiagonal_full_reortho.py  test_bidiag.py  test_bidiagonal_full_reortho.py  test_consistency.py  test_gkl_bidiagonal.py  test_gkl_full_reortho.py  test_gram_schmidt.py  test_hessenberg.py  test_hessenberg_adjoint.py  test_lanczos_full_reortho.py  test_lanczos_tridiagonal.py  test_svd.py  test_svd_approx.py  test_tridiag.py  test_tridiag_sym.py  test_tridiag_sym_adjoint.py  test_tridiagonal_full_reortho.py
tests/test_eig/: test_eig_partial.py  test_eigh_partial.py  test_svd_partial.py
tests/test_funm/: test_funm_arnoldi.py  test_funm_chebyshev.py  test_funm_lanczos_spd.py  test_funm_lanczos_sym.py  test_integrand_funm_logdet_product.py  test_integrand_funm_logdet_sym.py  test_integrand_funm_product_logdet.py  test_integrand_funm_product_schatten_norm.py  test_integrand_funm_schatten_norm.py  test_integrand_funm_sym_logdet.py  test_monte_carlo_funm_product_logdet.py  test_monte_carlo_funm_product_schatten_norm.py  test_monte_carlo_funm_sym_logdet.py
tests/test_funm_trace/: test_integrand_logdet_product.py  test_integrand_logdet_spd.py  test_integrand_logdet_sym.py  test_integrand_schatten_norm.py
tests/test_hutch/: test_diagonal.py  test_frobeniusnorm_squared.py  test_trace.py  test_trace_and_diagonal.py  test_trace_moments.py  test_trace_with_variance.py
tests/test_hutchinson/: __init__.py  test_diagonal.py  test_estimate.py  test_estimate_multiple_stats.py  test_frobeniusnorm_squared.py  test_multiestimate.py  test_trace.py  test_trace_and_diagonal.py  test_trace_moments.py  test_van_der_corput.py  test_wrap_first_two_moments.py  test_wrap_moments.py
tests/test_lanczos/: __init__.py  test_alg_bidiagonal_full_reortho.py  test_alg_tridiagonal_full_reortho.py  test_bidiagonal_full_reortho.py  test_funm_vector_product.py  test_gkl_full_reortho.py  test_integrand_logdet_product.py  test_integrand_logdet_spd.py  (+4 more)
tutorials/: 1_log_determinants.py  2_pytree_logdeterminants.py  3_uncertainty_quantification.py  4_control_variates.py  5_vector_calculus.py  6_low_memory_trace_estimation.py  7_matrix_functions.py  8_gaussian_logpdf.py  _log_determinants.py  control_variates.py  log_determinants.py  pytree_logdeterminants.py  uncertainty_quantification.py  vector_calculus.py
vector_calculus/: index.html
(+52 files in other folders)
