[metadata]
name = matfree
description = Trace estimation and so on
author = Nicholas Krämer
author_email = pekra@dtu.dk
license = MIT
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8


[options.extras_require]
cpu =
    jax[cpu]
test =
    pytest
    pytest-cases
lint =
    %(test)s
    pre-commit
    ruff
    mypy
format =
    isort
    black
    yamlfix
    end-of-file
doc =
    mkdocs
    mkdocs-material
    mkdocstrings
    mkdocstrings-python
    # Benchmarks
    matplotlib
    tqdm
full =
    %(cpu)s
    %(lint)s
    %(test)s
    %(doc)s
    %(format)s
